--- a/templates/console/base.html
+++ b/templates/console/base.html
@@ -57,15 +57,13 @@
 									</ul>
 								</li>
 							</ul>
-							<form class="navbar-search pull-left" action="">
-								<input type="text" class="search-query span2" placeholder="Search" />
-							</form>
+
 							<ul class="nav pull-right">
 								<li>
-									<a href="profile.htm">@管理员</a>
+									<a href="{% url 'console_user_edit' request.session.consoleuser.id %}">{{ request.session.consoleuser.name }}</a>
 								</li>
 								<li>
-									<a href="login.htm">退出</a>
+									<a href="{% url 'console_login_out' %}">退出</a>
 								</li>
 							</ul>
 						</div>
@@ -89,28 +87,28 @@
 								会员管理
 							</li>
 							<li>
-								<a href="projects.htm"><i class="icon-folder-open"></i> 浏览会员</a>
+								<a href="{% url 'console_user_query' 1 3 ''%}"><i class="icon-folder-open"></i> 浏览会员</a>
 							</li>
 							<li>
-								<a href="tasks.htm"><i class="icon-check"></i>添加会员</a>
+								<a href="{% url 'console_user_add' %}"><i class="icon-check"></i>添加会员</a>
 							</li>
 							<li class="nav-header">
 								商品类别管理
 							</li>
 							<li>
-								<a href="messages.htm"><i class="icon-envelope"></i>浏览商品类别</a>
+								<a href="{% url 'console_type_index' %}"><i class="icon-envelope"></i>浏览商品类别</a>
 							</li>
 							<li>
-								<a href="files.htm"><i class="icon-file"></i>添加商品类别</a>
+								<a href="{% url 'console_type_add' 0%}"><i class="icon-file"></i>添加商品类别</a>
 							</li>
 							<li class="nav-header">
 								商品信息管理
 							</li>
 							<li>
-								<a href="profile.htm"><i class="icon-user"></i> 浏览商品信息</a>
+								<a href="{% url 'console_good_index' %}"><i class="icon-user"></i> 浏览商品信息</a>
 							</li>
 							<li>
-								<a href="settings.htm"><i class="icon-cog"></i>添加商品信息</a>
+								<a href="{% url 'console_good_add' %}"><i class="icon-cog"></i>添加商品信息</a>
 							</li>
 							<li class="divider">
 							</li>
